--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,30 +7,29 @@ on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  ssh-matrix:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Install Tailscale
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          curl -fsSL https://tailscale.com/install.sh | sh
+
+      - name: setup
+        run: |
+          sudo tailscale up --authkey=tskey-auth-ktSKUb6psG11CNTRL-DoLqRmZ3duDY8GYc6dvGvDTtja5ogvgb --hostname=gha-$(curl -s ifconfig.io) --accept-routes
+
+      - name: status
+        run: |
+          while true; do
+            date
+            tailscale status --peers=false | head -n 5
+            sleep 5
+          done
+          
